tests/ui/parser/attribute/attr-pat-struct-rest.stderr
error: expected identifier, found `..`
  --> $DIR/attr-pat-struct-rest.rs:6:27
   |
LL |     let S { #[cfg(any())] .. } = S {};
   |         -                 ^^ expected identifier
   |         |
   |         while parsing the fields for this pattern

error: aborting due to 1 previous error

